src/objects/FSTR__Business_Process__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object can be customized to support a company&apos;s business processes.  It can also be used as a template to guide in create your own custom object.</description>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Approval_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close_Steps_Not_Created__c</fullName>
        <inlineHelpText>This field is automatically updated by the Auto Close page with how many steps are being skipped by the auto close action.</inlineHelpText>
        <label>Auto Close - Steps Not Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Processes (Account)</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Business Process was generated as a step within another Business Process this lookup field displays the parent that generated it.</inlineHelpText>
        <label>Parent Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Child Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Case that this Business Process is part of (i.e. a step within a process on a Case).</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Processes (Contact)</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Days_to_Complete_Target__c</fullName>
        <formula>if( 
FSTR__Due_Date__c-datevalue(CreatedDate)&gt;0, 
FSTR__Due_Date__c - datevalue(CreatedDate), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete (Target)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Days_to_Complete__c</fullName>
        <formula>if( 
FSTR__Completed_Date__c-FSTR__Process_Initiated__c&gt;0, 
datevalue(FSTR__Completed_Date__c) - datevalue(CreatedDate), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition_Title__c</fullName>
        <label>Definition Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity that this Business Process is part of (i.e. a step within a process on an Opportunity).</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Process Group.</description>
        <inlineHelpText>Lookup to Process Group. Use to group process records.</inlineHelpText>
        <label>Process Group</label>
        <referenceTo>FSTR__Process_Group__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <description>Timestamp used to determine if a process has been created twice on the same object.</description>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__RL_Sort__c</fullName>
        <description>This field can be used to sort the Business Process related list by Open records first and then by Due Date Descending.  This needs to be added to the related list and then sorted by it descending.</description>
        <formula>IF(ISPICKVAL( FSTR__Status__c, &apos;Open&apos;), IF(NOT(ISBLANK(FSTR__Due_Date__c)),(FSTR__Due_Date__c - Date(1900,1,1)),1), IF(NOT(ISBLANK(FSTR__Due_Date__c)),-1*(Date(2500,1,1) - FSTR__Due_Date__c ),-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to sort the Business Process related list by Open records first and then by Due Date Descending.  This needs to be added to the related list and then sorted by it descending.</inlineHelpText>
        <label>RL Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Business Process was created from a Recurring Business Process record this field links back to that record.</inlineHelpText>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <description>Stores the steps in a stage that were not created (in JSON).  This field is used to determine whether to create child steps (by checking for skipped steps that are set to &apos;ignore in stage completion&apos;) or to proceed with the completion of a stage even if not all steps in that stage are completed.</description>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__pce_definition_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Definition that this object is executing on currently.</description>
        <inlineHelpText>Link to the Definition that this object is executing on currently.</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Business Processes</relationshipLabel>
        <relationshipName>Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Process</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Business Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <recordTypes>
        <fullName>FSTR__Non_Defined_Request</fullName>
        <active>true</active>
        <description>Non-Defined Request with follow-up - No other Business Process is applicable</description>
        <label>*Non-Defined Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Non_Follow_Up_Note</fullName>
        <active>true</active>
        <description>Non-Defined Request with NO follow-up - Used to record note, email, phone call, etc.</description>
        <label>*Non-Follow Up Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Sample_Process</fullName>
        <active>true</active>
        <label>Sample Process</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>